# micro-fastapi

./: .env.example  README.md  main.py  pyproject.toml
apps/shopify/: models.py
apps/user/: models.py  router.py  schema.py
base/: __init__.py
base/settings/: __init__.py  base.py
base/utils/: __init__.py  apps.py
core/: dependencies.py  middlewares.py  models.py  serializer.py
routers/: users.py
