[tool.poetry]
name = "node app api service"
version = "0.1.0"
description = "Shopify App API Service python"
authors = ["Bikin Shrestha <bikin@qodemedia.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
python-dotenv = "^1.0.1"
aerich = "^0.7.2"
shopifyapi = "^12.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"



[tool.aerich]
tortoise_orm = "base.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
